--- a/index.html
+++ b/index.html
@@ -117,21 +117,24 @@
                         <div class="module-control-group_container">
                             <div class="module-control-group_tool-group-container">
                                 <div class="module-control-group_tool-group-scale">
-                                    <span class="module-control-group_group-name">Scale</span>
-                                     <span class="module_slider_control">
+
+                                    <div class="module-slider-control">
                                         <em>1%</em>
                                         <input id="scaleImageControl" type="range" min="1" max="100" value="100"/>
                                         <em>100%</em>
-                                    </span>
+                                    </div>
+                                    <div class="module-control-group_lower-control-container">
                                     <span class="module-control-group_control-value">
                                         <span id="scaleValue">100</span>
                                         <span>%</span>
                                     </span>
+                                        <span class="module-control-group_group-name">Scale</span>
                                     <span class="module-control-group_resets">
                                         <button id="resetScale" title="Reset Scale" disabled="disabled">
                                             <i class="icon-cancel-circle"></i>
                                         </button>
                                     </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
