--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
                     <div id="controlSetCrop" class="photo-widget_control-group module-control-group">
                         <div class="module-control-group_container">
                             <div class="module-control-group_tool-group-container">
-                                <div class="module-control-group_tool-group">
-                                    <button class="photo-widget_boolean-button" id="cropImageControl">
-                                        <span>Crop</span>
-                                    </button>
+                                <div class="module-control-group_tool-group-crop">
+                                    <span class="module-control-group_group-name">Crop</span>
+                                   <button class="photo-widget_boolean-button" id="cropImageControl">
+                                        < <span>Crop</span>
+                                     </button>
                                 </div>
                             </div>
                         </div>
