--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <button id="toolSwitchClear" value="Clear" title="Start Over"
                                 class="module-control-group_tool-switch">
                             <i class="icon-cancel-circle"></i>
-                            <span class="module-control-group_tool-switch-label">Clear</span>
+                            <span class="module-control-group_tool-switch-label">Reset</span>
 
                         </button>
                     </div>
@@ -216,9 +216,12 @@
                         <div class="module-control-group_container">
                             <div class="module-control-group_tool-group-container">
                                 <div class="module-control-group_tool-group-save">
-                                    <label>
-                                        <a class="button" id="save" href="#" download>save</a>
-                                    </label>
+                                    <div class="module-save-control">
+                                        <a class="button" id="save" href="#" download><i class="icon-floppy-disk"></i></a>
+                                    </div>
+                                    <div class="module-control-group_lower-control-container">
+                                        <span class="module-control-group_group-name">Save</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -226,10 +229,16 @@
                     <div id="controlSetClear" class="photo-widget_control-group module-control-group">
                         <div class="module-control-group_container">
                             <div class="module-control-group_tool-group-container">
-                                <div class="module-control-group_tool-group">
-                                    <label>
-                                        <button id="clearImageControl">Cancel</button>
-                                    </label>
+                                <div class="module-control-group_tool-group-reset">
+
+                                    <div class="module-reset-control">
+                                        <button id="clearImageControl"><i class="icon-cancel-circle"></i></button>
+                                    </div>
+                                    <div class="module-control-group_lower-control-container">
+                                        <span class="module-control-group_group-name">Reset</span>
+                                    </div>
+
+
                                 </div>
                             </div>
                         </div>
@@ -238,23 +247,39 @@
                         <div class="module-control-group_container">
                             <div class="module-control-group_tool-group-container">
                                 <div class="module-control-group_tool-group-zoom">
-                                    <span class="module-control-group_label">Zoom&nbsp; </span>
-                                    <span id="zoomValue" class="photo-widget_control-value">100</span>
-                                    <span>%</span>
-                                    <label>
+
+
+
+                                    <div class="module-zoom-control">
                                         <em>1%</em>
                                         <input id="zoomControl" type="range" min="1" max="500" value="100"/>
                                         <em>500%</em>
-                                    </label>
-                                    <span>Reset</span>
-                                    <button id="zoom50Button" value="50" title="Zoom 50%" disabled="disabled"><i
-                                            class="icon-history"></i></button>
-                                    <button id="zoom100Button" value="100" title="Zoom 100%" disabled="disabled">
-                                        <i class="icon-history"></i></button>
-                                    <button id="zoom200Button" value="200" title="Zoom 200%" disabled="disabled">
-                                        <i class="icon-history"></i></button>
-                                    <button id="zoom500Button" value="500" title="Zoom 500%" disabled="disabled">
-                                        <i class="icon-history"></i></button>
+                                        <button id="zoom50Button" value="50" title="Zoom 50%" disabled="disabled">50%</button>
+                                        <button id="zoom200Button" value="200" title="Zoom 200%" disabled="disabled">
+                                            200%</button>
+                                        <button id="zoom500Button" value="500" title="Zoom 500%" disabled="disabled">
+                                            500%</button>
+
+                                    </div>
+                                    <div class="module-control-group_lower-control-container">
+                                    <span class="module-control-group_control-value">
+                                        <span id="zoomValue">100</span>
+                                        <span>%</span>
+                                    </span>
+                                        <span class="module-control-group_group-name">Zoom</span>
+                                    <span class="module-control-group_resets">
+                                       <button id="zoom100Button" value="100" title="Zoom 100%" disabled="disabled">
+                                            <i class="icon-cancel-circle"></i></button>
+                                    </span>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+
+
                                 </div>
                             </div>
                         </div>
